...
        )

        if (onNavigateToCreateNewSong != null) {
            Row(verticalAlignment = Alignment.CenterVertically) {
                Text(
                    modifier = Modifier.padding(horizontal = 8.dp),
                    text = "Song doesn't exist yet?",
                    color = MaterialTheme.colorScheme.onBackground
                )
                Spacer(modifier = Modifier.weight(1f))
                TextButton(onClick = { onNavigateToCreateNewSong(viewState.query) }) { Text(text = "Create a new song") }
            }
        }

        if (searchState.value is LoadingState.Error) {
            Box(
                modifier = Modifier
...
