...
    onQueryChange: (newQuery: String) -> Unit,
    onNavigateToSongSelection: (query: String) -> Unit
) {
    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Create New Tab") },
                navigationIcon = {
                    IconButton(onClick = navigateBack) {
                        Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Back")
                    }
                },
                colors = TopAppBarDefaults.topAppBarColors(
...
