...

    <string name="title_favorites_playlist" translation_description="The title of the Favorites playlist/home tab">Favorites</string>
    <string name="title_popular_playlist" translation_description="The title of the Popular playlist/home tab">Popular</string>
    <string name="title_playlists_page" translation_description="The title of the Playlists home tab">Playlists</string>
    <string name="title_add_to_playlist_dialog" translation_description="The title of the Add To Playlist dialog">Add to playlist</string>
    <string name="title_create_playlist_dialog" translation_description="Title for the Create Playlist dialog">Create playlist</string>
    <string name="title_create_song" translation_description="Title for the Create Song screen">Create Song</string>

    <string name="placeholder_playlist_title" translation_description="Placeholder text for Playlist Title entry field">Playlist Title</string>
    <string name="placeholder_playlist_description" translation_description="Placeholder text for Playlist Description entry field">Playlist Description</string>
    <string name="playlist_empty_description" translation_description="The description shown on the playlist screen for an empty playlist with no songs added">Add songs to your playlist by finding the song you\'d like and selecting the three dot menu at the top right of the screen.</string>
    <string name="select_playlist_dialog_no_selection" translation_description="The playlist text shown when there's no playlist selected in the Add To Playlist dialog. This can happen when no playlists have been created yet.">Select a playlist…</string>
    <string name="empty_favorites" translation_description="The text shown on the Favorites page when no songs have been favorited">Select the heart icon on any song to save it offline in this list.</string>
...
