...
            modifier = columnModifier
        ) {
            TabsSearchBar(
                modifier = Modifier
                    .fillMaxWidth(),
                leadingIcon = {
                    IconButton(onClick = { showAboutDialog = true }, modifier = Modifier.testTag("aboutButton")) {
                        Box(modifier = Modifier) {
                            val importProgress = viewState.playlistImportProgress.observeAsState(0f)
                            CircularProgressIndicator(progress = { importProgress.value })
                        }
                        Icon(
                            imageVector = ImageVector.vectorResource(id = R.drawable.ic_launcher_foreground),
...
